--- a/testinstagram.html
+++ b/testinstagram.html
@@ -82,11 +82,11 @@
 <DIV class="boxPanelNoBorder">
 <P class='boxInfoArea'>
 <ul>
-<li>1950s/60s Rock and Roll Singer.</li>
-<li>1940s/50s/60s Vintage Entertainer.</li>
-<li>Swing Singer and Heartfelt Crooner.</li>
-<li>Let me enliven your events with some fun vintage 'Rock n Roll' music.</li>
-<li>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</li>
+<li>1950s/60s Rock and Roll Singer</li>
+<li>1940s/50s/60s Vintage Entertainer</li>
+<li>Swing Singer and Heartfelt Crooner</li>
+<li>Let me enliven your events with some fun vintage 'Rock n Roll' music</li>
+<li>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics</li>
 </ul>
 </P>
 </DIV>
@@ -125,9 +125,10 @@
 <P class='boxInfoArea'>
 <ul>
 <li>Dynamic Rock n Roll Vocalist and Heartfelt Crooner</li>
-<li>Jive the night away to the energetic sounds those classic Rock n Roll songs.</li>
+<li>Jive the night away to the energetic sounds those classic Rock n Roll songs</li>
 <li>Fun 1950s 'Teddy boy' style outfit</li>
- <li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everly Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly, Frank Sinatra, Dean Martin, The Platters, Michael Buble and many more.</li>
+<li>Rock and Roll Christmas set also available</li>
+<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everly Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly, Frank Sinatra, Dean Martin, The Platters, Michael Buble and many more</li>
 </ul>
 </P>
 </DIV>
