--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
 <DIV class="boxPanelNoBorder">
 <P class='boxInfoArea'>
 <ul>
-<li>1950s/60s Rock and Roll Singer.</li>
-<li>1950s/60s Swing Singer.</li>
-<li>Let me enliven your events with some fun vintage 'Rock n Roll' music.</li>
-<li>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</li>
+<li>1950s/60s Rock and Roll Singer</li>
+<li>1940s/50s/60s Vintage Entertainer</li>
+<li>Swing Singer and Heartfelt Crooner</li>
+<li>Let me enliven your events with some fun vintage 'Rock n Roll' music</li>
+<li>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics</li>
 </ul>
 </P>
 </DIV>
@@ -119,17 +120,38 @@
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></TD>
-<TD><DIV class="boxHeading">Dynamic Rock n Roll Vocalist and Heartfelt Crooner</DIV></TD></TR>
+<TD><DIV class="boxHeading">Solo 1950s/1960s Rock and Roll Set</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
 <ul>
 <li>Dynamic Rock n Roll Vocalist and Heartfelt Crooner</li>
-<li>Jive the night away to the energetic sounds those classic Rock n Roll songs.</li>
-<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everly Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly, Frank Sinatra, Dean Martin, The Platters, Michael Buble and many more.</li>
+<li>Jive the night away to the energetic sounds those classic Rock n Roll songs</li>
+<li>Fun 1950s 'Teddy boy' style outfit</li>
+<li>Rock and Roll Christmas set also available</li>
+<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everly Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly, Frank Sinatra, Dean Martin, The Platters, Michael Buble and many more</li>
+</ul>
+</P>
+</DIV>
+ 
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0005-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">Solo 1940s Set</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+I now offer a solo 1940s set. 
+<ul>
+<li>Crooner classics</li>
+<li>Wartime songs</li>
+<li>Sing along tunes</li>
+<li>1940s style outfit</li>
+<li>Epic hits by: Nat King Cole, Bing Crosby, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, Harry Connick Jr and many more.</li>
 </ul>
 </P>
 </DIV>
 
+<br/>
+ 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0010-thumb.jpg" alt="AndyBGoode"></a></TD>
@@ -140,13 +162,32 @@
 <li>Available for: Birthdays, Weddings, Anniversaries, Fayres, Fetes, Food Fayres, Vintage Events, Parties, Dances, Church Events, Residential Homes, Care Homes, Hospices, etc...</li>
 <li>Based in Tamworth, Staffordshire, Midlands</li>
 <li>I only use high quality backing tracks</li>
-<li>Fun 'Teddy boy' style outfit</li>
 <li>PA Provided for most events</li>
 <li>Current Public Liability Insurance</li>
 </ul>
 </P>
 </DIV>
-
+ 
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0016-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">1940s Vocal Harmony Group</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+I'm also part of a 1940s Vocal Harmony Group named <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>. 
+We sing delightful vintage tunes in the style of Bing Crosby and The Andrew's Sisters while dressed in lovely vintage style outfits. 
+We also offer combined 1940s + Andy B Goode 1950s/1960s Rock n Roll gigs.
+Perfect for:
+<ul>
+<li>1940s Events</li>
+<li>Christmas Events</li>
+<li>Food Festivals</li>
+<li>Vintage Fairs</li>
+</ul>
+</P>
+</DIV>
+  
+ 
 </div>
 </div>
 
@@ -208,12 +249,41 @@ Or click to download each mp3 for free.<br/>
 </P>
 </DIV>
 
-<br/>
+
+<!--
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0014-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">SWINGING MOTHERS DAY AFTERNOON TEA</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Sunday 26th March 2pm till 6pm<br/>
+Old School Tea Rooms, 57 High Street, Ibstock, Leicestershire LE67 6LH.<br/>
+£15 Ticket (01530 267310).<br/>
+Listen to some Swing and Rock n Roll during Traditional Afternoon High Tea with a great selection of sandwiches, cakes and fancies plus teas and coffee.<br/>
+A most splendid '1916 Model T Ford' will be parked outside, so bring your camera.<br/>
+Come spend a lovely Mothering Sunday with us.
+</P>
+</DIV>
+-->
+ 
+
+ 
+</div>
+</div>
+
+ 
+ 
+ 
+<div id="events-area">
+<h2 id="events" class="banner">Upcoming Events</h2>
+<div class="textbox-area">
+
  
 <DIV class="boxPanelDoubleWidth">
 <TABLE class='boxHeadingArea'>
 <tr>
-<td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0016-thumb.jpg" alt="AndyBGoode"></a></td>
+<td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0015-thumb.jpg" alt="AndyBGoode"></a></td>
 <td><DIV class="boxHeading">UPCOMING PUBLIC GIGS:</DIV></td>
 <td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0020-thumb.jpg" alt="AndyBGoode"></a></td>
 </tr>
@@ -238,27 +308,19 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 </P>
 </DIV>
 
-
-<!--
-<DIV class="boxPanel">
-<TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0014-thumb.jpg" alt="AndyBGoode"></a></TD>
-<TD><DIV class="boxHeading">SWINGING MOTHERS DAY AFTERNOON TEA</DIV></TD></TR>
-</TABLE>
-<P class='boxInfoArea'>
-Sunday 26th March 2pm till 6pm<br/>
-Old School Tea Rooms, 57 High Street, Ibstock, Leicestershire LE67 6LH.<br/>
-£15 Ticket (01530 267310).<br/>
-Listen to some Swing and Rock n Roll during Traditional Afternoon High Tea with a great selection of sandwiches, cakes and fancies plus teas and coffee.<br/>
-A most splendid '1916 Model T Ford' will be parked outside, so bring your camera.<br/>
-Come spend a lovely Mothering Sunday with us.
-</P>
-</DIV>
--->
+ 
+</div>
+</div>
  
  
  
-<br/>
+ 
+ 
+ 
+<div id="social-area">
+<h2 id="social" class="banner">Social Media</h2>
+<div class="textbox-area">
+ 
  
 <DIV class="boxPanelFullWidth">
 <TABLE class='boxHeadingArea'>
@@ -266,14 +328,11 @@ Come spend a lovely Mothering Sunday with us.
 <TR><TD><div id="instafeed"></div></TD></TR>
 </TABLE>
 </DIV>
- 
- 
- 
 
  
 </div>
 </div>
-
+ 
 
 <div id="contact" class="contact-area">
 <h2 class="banner">Contact me</h2>
