top para in a P

--- a/testimonials.html
+++ b/testimonials.html
@@ -73,9 +73,10 @@ Andy B Goode 1950s/60s Rock n Roll/Swing Singer
 <div id="testimonials">
 <h2 class="banner">Testimonials</h2>
 <div class="textbox-area">
+<P class='boxInfoArea'>
 Here are some of the things that people have said about "Andy B Goode" gigs.<br/>
-If you have any comments, please do contact me.<br/>
-
+If you have any comments, please do contact me.
+</P>
 <table>
  
 <tr>
