--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 <li>9 Sept 2017 Saturday 2pm till 6pm, Charity Truck Pull, The Fox and Dogs Pub, Warton, B79 0HU (ABG)</li>
 <li>24 Sept 2017 Sunday 11:30am till 4pm, Rubery Vintage Fair, Rubery Social Club, B45 9JW (ABG)</li>
 <li>30 Sept 2017 Saturday 10am till 2pm, Makers Market, Swadlincote Town Centre (ABG)</li>
-<li>1 Oct 2017 Sunday 3pm, Southam Retro Revival 2017, Southam Town Centre (ABG)</li>
+<li>1 Oct 2017 Sunday 12pm till 5pm (singing at 4pm), Southam Retro Revival 2017, Southam Town Centre (ABG)</li>
 <li>14 Oct 2017 Saturday 9pm till 11:30pm, Rock n Roll / Swing Night, Warton Club, Warton, B79 0HW (ABG)</li>
 <li>15 Oct 2017 Sunday 10am till 2:30pm, International Food Fair, Swadlincote Town Centre  (Jays)</li>
 <li>28 Oct 2017 Saturday 12 till 3pm, Aniversary afternoon, Summerhouse Bakery, Burton Market Hall, Burton-on-Trent, DE14 1HA (ABG)</li>
