--- a/songlist.html
+++ b/songlist.html
@@ -146,6 +146,9 @@ Shakin' Stevens: Merry Xmas Everyone<br/>
 </DIV>
 
  
+<BR/>
+ 
+ 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <tr><td><a href="photos.html"><img class="boxImage" src="photos/andybgoode0004-thumb.jpg" alt="Crooning"></a></td>
@@ -160,6 +163,24 @@ Michael Bublé: You've Got A Friend In Me<br/>
 </P>
 </DIV>
 
+<DIV class="boxPanel">
+<table class="boxHeadingArea">
+<tbody><tr><td><a href="http://www.andybgoode.com/photos.html"><img class="boxImage" src="./ABG-Songs_files/thejays0005-thumb.jpg" alt="1940s Classics"></a></td>
+<td><div class="boxHeading">1940's CLASSICS</div></td></tr>
+</tbody></table>
+<p class="boxInfoArea">
+Bing Crosby: Blue Skies, I'll Be Seeing You, Swinging on A Star, You Are My Sunshine<br/>
+Dean Martin: It Don't Mean A Thing<br/>
+Dooley Wilson/Harry Connick, Jr.: It Had To Be You<br/>
+Michael Bublé: You're Nobody Till Somebody Loves You<br/>
+Nat King Cole: It's Only A Paper Moon, Route 66, Stardust, Straighten Up And Fly Right<br/>
+Rudy Vallée: Harbour Lights<br/>
+Wartime Classics: Bless them All, Hang Out This Washing, Kiss Me Goodnight Sergeant Major, Pack Up Your Troubles, Wish Me Luck As You Wave Me Goodbye<br/>
+Vera Lynn: The White Cliffs of Dover, We'll Meet Again<br/>
+</p>
+</DIV> 
+ 
+ 
 </div>
 </div>
 
