--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 <li>3 Nov 2017 Friday 7pm till 9:30pm, Fireworks / Bonfire Event, The Fox and Dogs Pub, Warton, B79 0HU (ABG)</li>
 <li>3 Dec 2017 Sunday 11am till 4pm,  Christmas Gift Market, Calke Abbey Ridding Stables, Ticknall DE73 (Jays)</li>
 <li>8 Dec 2017 Friday 8pm till 10pm, Christmas Rat Pack / Rock and Roll Evening, Ellen Louisa's Vintage Teas, Unit 3b, Taragon Business Centre, 9-13 Coventry Rd, Burbage, Leicestershire (ABG)
-<li>9 Dec 2017 Saturday 11am till 2pm, Christmas Rock and Roll Lunchtime, Sugar Muffins 1950s Cafe, Wolverhampton, WV1 3HH (ABG)</li>
+<li>9 Dec 2017 Saturday 11am till 2pm, Christmas Rock and Roll Lunchtime, Sugar Muffins 1950s Cocktail Bar, Wolverhampton, WV1 3HH (ABG)</li>
 <li>9 Dec 2017 Saturday 9pm till Midnight, Christmas Rock and Roll Night + Disco, Warton Club, Warton, B79 0HW (ABG)</li>
 <li>16 Dec 2017 Saturday 11am till 2pm, Christmas Rock and Roll Lunchtime, Summerhouse Bakery, Burton Market Hall, Burton-on-Trent, DE14 1HA (ABG)</li>
 
