--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--
- Copyright (C) 2017 Andrew Britton.
+ Copyright (C) 2018 Andrew Britton.
  All rights reserved
  -->
 <head>
@@ -293,6 +293,7 @@ I am delighted to announce some public gigs where vintage classics will be the o
 Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> (1940s Vocal Harmony). 
 </P>
 <ul>
+ <!--
 <li>1 Oct 2017 Sunday 12pm till 5pm (singing at 4pm), Southam Retro Revival 2017, Southam Town Centre (ABG)</li>
 <li>14 Oct 2017 Saturday 9pm till 11:30pm, Rock n Roll / Swing Night, Warton Club, Warton, B79 0HW (ABG)</li>
 <li>15 Oct 2017 Sunday 10am till 2:30pm, International Food Fair, Swadlincote Town Centre  (Jays)</li>
@@ -304,7 +305,13 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 <li>9 Dec 2017 Saturday 11am till 2pm, Christmas Rock and Roll Lunchtime, Sugar Muffins 1950s Cocktail Bar, Wolverhampton, WV1 3HH (ABG)</li>
 <li>9 Dec 2017 Saturday 9pm till Midnight, Christmas Rock and Roll Night + Disco, Warton Club, Warton, B79 0HW (ABG)</li>
 <li>16 Dec 2017 Saturday 11am till 2pm, Christmas Rock and Roll Lunchtime, Summerhouse Bakery, Burton Market Hall, Burton-on-Trent, DE14 1HA (ABG)</li>
-
+-->
+<li>11 March 2018 Sunday 11am till 5pm, Mum Knows Best Fun Day and Bake Off, Marstons Sports & Social Club, Shobnall Road, Burton-Upon-Trent, Staffordshire (ABG)</li>
+<li>7 May 2018 Monday 12 > 4pm, Vintage Fair at National Arboretum, Croxall Road, Alrewas, Burton-on-Trent DE13 7AR (Jays)</li>
+<li>23 June 2018 Saturday 7pm, Coalville Park 1940s Open Air Event, 46-42, London Rd, Coalville LE67 (ABG)</li>
+<li>7 July 2018 Saturday 1pm > 4pm, Thornton Village Carnival, Thornton (ABG)</li>
+<li>23 Sept 2018 Sunday 12 > 5pm, Southam Retro Revival Day, Southam Town Centre (ABG)</li>
+ 
  </ul>
 <P class='boxInfoArea'>
 'ABG': Andy B Goode solo gig<br/>
