--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 <li>16 Dec 2017 Saturday 11am till 2pm, Christmas Rock and Roll Lunchtime, Summerhouse Bakery, Burton Market Hall, Burton-on-Trent, DE14 1HA (ABG)</li>
 -->
 <li>11 March 2018 Sunday 11am till 5pm, Mum Knows Best Fun Day and Bake Off, Marstons Sports & Social Club, Shobnall Road, Burton-Upon-Trent, Staffordshire (ABG)</li>
-<li>7 May 2018 Monday 12 > 4pm, Vintage Fair at National Arboretum, Croxall Road, Alrewas, Burton-on-Trent DE13 7AR (Jays)</li>
+<li>7 May 2018 Monday 12 till 4pm, Vintage Fair at National Arboretum, Croxall Road, Alrewas, Burton-on-Trent DE13 7AR (Jays)</li>
 <li>23 June 2018 Saturday 7pm, Coalville Park 1940s Open Air Event, 46-42, London Rd, Coalville LE67 (ABG)</li>
-<li>7 July 2018 Saturday 1pm > 4pm, Thornton Village Carnival, Thornton (ABG)</li>
-<li>23 Sept 2018 Sunday 12 > 5pm, Southam Retro Revival Day, Southam Town Centre (ABG)</li>
+<li>7 July 2018 Saturday 1pm till 4pm, Thornton Village Carnival, Thornton (ABG)</li>
+<li>23 Sept 2018 Sunday 12 till 5pm, Southam Retro Revival Day, Southam Town Centre (ABG)</li>
  
  </ul>
 <P class='boxInfoArea'>
