Rat Pack songs added

--- a/songlist.html
+++ b/songlist.html
@@ -170,14 +170,15 @@ Vera Lynn: The White Cliffs of Dover, We'll Meet Again<br/>
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <tr><td><a href="photos.html"><img class="boxImage" src="photos/andybgoode0004-thumb.jpg" alt="Crooning"></a></td>
-<td><DIV class="boxHeading">CROONER / SWING HITS</DIV></td></tr>
+<td><DIV class="boxHeading">RAT PACK / CROONER / SWING HITS</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-Frank Sinatra: Fly Me To The Moon; Cheek To Cheek; Come Fly With Me; <a href="music.html#musicYoung">You Make Me Feel So Young</a><br/>
+Frank Sinatra: New York, New York; Fly Me To The Moon; Cheek To Cheek; Come Fly With Me; <a href="music.html#musicYoung">You Make Me Feel So Young</a>; I've Got You Under My Skin; The Lady Is a Tramp; Love and Marriage<br/>
+Bing Crosby: Pennies from Heaven; All I Do Is Dream of You<br/>
 Bobby Darin: Mack the Knife; Beyond the Sea; Things<br/>
-Dean Martin: Memories Are Made Of This, How D'Ya Like Your Eggs in the Morning<br/>
-Nat King Cole: <a href="music.html#musicLove">L-O-V-E</a>, <a href="music.html#musicLetThereBeLove">Let There Be Love</a><br/>
-Michael Bublé: You've Got A Friend In Me<br/>
+Dean Martin: Sway; Memories Are Made Of This, How D'Ya Like Your Eggs in the Morning<br/>
+Nat King Cole: <a href="music.html#musicLove">L-O-V-E</a>, <a href="music.html#musicLetThereBeLove">Let There Be Love</a>; When I Fall in Love<br/>
+Michael Bublé: All of Me; You've Got A Friend In Me<br/>
 </P>
 </DIV> 
  
