--- a/songlist.html
+++ b/songlist.html
@@ -98,7 +98,7 @@
 <P class='boxInfoArea'>
 Chuck Berry: <a href="videos.html#videoJohnnyBGoode">Johnny B. Goode</a>; Rock and Roll Music<br/>
 Bill Haley and His Comets: Rock Around the Clock; Shake, Rattle and Roll; See You Later Alligator<br/>
-Elvis: Blue Suede Shoes; Hound Dog; All Shook Up; Jailhouse Rock<br/>
+Elvis: Blue Suede Shoes; Hound Dog; All Shook Up; Jailhouse Rock; Can't Help Falling in Love<br/>
 Eddie Cochran: C'mon Everybody<br/>
 Danny and The Juniors: Rock And Roll Is Here To Stay, At the Hop<br/>
 The Everly Brothers: Wake up Little Susie; Bye, Bye Love<br/>
@@ -112,7 +112,7 @@ Dion and The Belmonts: <a href="videos.html#videoTeenagerInLove">A Teenager in L
 The Penguins: <a href="videos.html#videoEarthAngel">Earth Angel (Will You Be Mine)</a><br/>
 Little Anthony and The Imperials: Tears on my Pillow<br/>
 Johnny Tillotson: <a href="music.html#musicPoetry">Poetry in Motion</a><br/>
-Cliff Richard: Living Doll, Move It<br/>
+Cliff Richard: Living Doll, Move It, Congratulations<br/>
 Chris Montez: Let's Dance<br/>
 Roy Orbison: Ooby Dooby; Oh, Pretty Woman<br/>
 Fats Domino: I'm Walking<br/>
@@ -157,7 +157,8 @@ Shakin' Stevens: Merry Xmas Everyone<br/>
 <P class="boxInfoArea">
 Bing Crosby: Blue Skies, I'll Be Seeing You, Swinging on A Star, You Are My Sunshine<br/>
 Dean Martin: It Don't Mean A Thing<br/>
-Dooley Wilson/Harry Connick, Jr.: It Had To Be You<br/>
+Dooley Wilson: As Time Goes By<br/>
+Harry Connick, Jr.: It Had To Be You<br/>
 Michael Bublé: You're Nobody Till Somebody Loves You<br/>
 Nat King Cole: It's Only A Paper Moon, Route 66, Stardust, Straighten Up And Fly Right<br/>
 Rudy Vallée: Harbour Lights<br/>
