--- a/index.html
+++ b/index.html
@@ -162,8 +162,9 @@ I now offer a solo 1940s set.
 <li>Available for: Birthdays, Weddings, Anniversaries, Fayres, Fetes, Food Fayres, Vintage Events, Parties, Dances, Church Events, Residential Homes, Care Homes, Hospices, etc...</li>
 <li>Based in Tamworth, Staffordshire, Midlands</li>
 <li>I only use high quality backing tracks</li>
-<li>PA Provided for most events</li>
+<li>Powerful 2800W PA</li>
 <li>Current Public Liability Insurance</li>
+<li>PAT Tested Equipment</li>
 </ul>
 </P>
 </DIV>
