--- a/index.html
+++ b/index.html
@@ -314,7 +314,9 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 <li>7 July 2018 Saturday 1pm till 4pm, Thornton Village Carnival, Thornton (ABG)</li>
 <li>19 Aug 2018 Sunday 4.30pm till 5:30pm (Rat Pack Style), Swadlincote Proms in the Park, Bandstand at Maurice Lea Memorial Park, Church Gresley (ABG)</li>
 <li>23 Sept 2018 Sunday 12 till 5pm, Southam Retro Revival Day, Southam Town Centre (ABG)</li>
- 
+<li>30 Sept 2018 Sunday 10.00am till 4:00pm, Lou Lou's Vintage Fair, Albert Hall, N Circus St, Nottingham, NG1 5AA United Kingdom (ABG)</li>
+<li>24 Nov 2018 Saturday 7pm, Rock and Roll night with Fish and Chips (Tickets in advance £12.50), Edingale Village Hall, 7 Moores Croft, Edingale, Tamworth B79 9LJ (ABG)</li>
+
  </ul>
 <P class='boxInfoArea'>
 'ABG': Andy B Goode solo gig<br/>
