--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="w3.css">
 </head>
-<body w3-black>
+<body>
 
 <div class="w3-container w3-black">
   <h1>Andy B Goode</h1> 
