--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="w3.css">
 </head>
 <body>
+<div class="w3-container w3-deep-purple">
 
 <div class="w3-container w3-black">
   <h1>Andy B Goode</h1> 
@@ -41,7 +42,7 @@
 </ul>
   </div>
 
-  <div class="w3-third">
+  <div class="w3-third w3-dark-grey">
     <h2>1940s</h2>
     <p>Solo 1940s and Wartime Sets</p>
 <ul>
@@ -70,25 +71,75 @@
   </div>
 
   <div class="w3-third w3-dark-grey">
-    <h2>Paris2</h2>
-    <p>Paris is the capital of France.</p> 
-    <p>The Paris area is one of the largest population centers in Europe,
-    with more than 12 million inhabitants.</p>
+    <h2>A Vintage Christmas</h2>
+    <p>Rock and Roll and Crooning Christmas.</p> 
+<ul>
+<li>Classy Rat Pack / Swing and Crooning hits.</li>
+<li>xxx xxx xxx xxxx xxxxxx x songs</li>
+<li>DJ Sinatra-style outfit</li>
+<li>xx xx xx xxx xxx </li>
+<li>Epic hits by: Frank Sinatra, Dean Martin, Andy Williams, Michael Buble and many more</li>
+</ul>
   </div>
 
   <div class="w3-third w3-black">
-    <h2>Tokyo2</h2>
-    <p>Tokyo is the capital of Japan.</p>
-    <p>It is the center of the Greater Tokyo Area,
-    and the most populous metropolitan area in the world.</p>
+    <h2>1940s Vocal Harmony Group</h2>
+    <p>I'm also part of a 1940s Vocal Harmony Group named <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>. 
+We sing delightful vintage tunes in the style of Bing Crosby and The Andrew's Sisters while dressed in lovely vintage style outfits. 
+We also offer combined 1940s + Andy B Goode 1950s/1960s Rock n Roll gigs.
+Perfect for:</p>
+<ul>
+<li>1940s Events</li>
+<li>Christmas Events</li>
+<li>Food Festivals</li>
+<li>Vintage Fairs</li>
+</ul>
   </div>
 </div>
 
 
-<div class="footer w3-black">
-  <p>Footer Here.</p>
+<div class="w3-container w3-black">
+  <h1>Upcoming Events</h1>
+  <p>I am delighted to announce some public gigs where vintage classics will be the order of the day. 
+Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> (1940s Vocal Harmony).</p>
+  <p>'ABG': Andy B Goode solo gig<br/>'Jays': Andy B Goode and The Jays Vintage gig.</p>
+<ul>
+<li>11 March 2018 Sunday 11am till 5pm, Mum Knows Best Fun Day and Bake Off, Marstons Sports and Social Club, Shobnall Road, Burton-Upon-Trent, Staffordshire (ABG)</li>
+<li>22 April 2018 Sunday 11am till 5pm, Burton Bounce Spring Fling, Marstons Sports and Social Club, Shobnall Road, Burton-Upon-Trent, Staffordshire (ABG)</li>
+<li>7 May 2018 Monday 12 till 4pm, Vintage Fair at National Arboretum, Croxall Road, Alrewas, Burton-on-Trent DE13 7AR (Jays)</li>
+<li>23 June 2018 Saturday 6pm, Music in the Park, 46-42, London Rd, Coalville LE67 (ABG)</li>
+<li>7 July 2018 Saturday 1pm till 4pm, Thornton Village Carnival, Thornton (ABG)</li>
+<li>19 Aug 2018 Sunday 4.30pm till 5:30pm (Rat Pack Style), Swadlincote Proms in the Park, Bandstand at Maurice Lea Memorial Park, Church Gresley (ABG)</li>
+<li>23 Sept 2018 Sunday 12 till 5pm, Southam Retro Revival Day, Southam Town Centre (ABG)</li>
+<li>30 Sept 2018 Sunday 10am till 4pm, Lou Lou's Vintage Fair, Albert Hall, N Circus St, Nottingham, NG1 5AA United Kingdom (ABG)</li>
+<li>24 Nov 2018 Saturday 7pm, Rock and Roll night with Fish and Chips (Tickets in advance £12.50), Edingale Village Hall, 7 Moores Croft, Edingale, Tamworth B79 9LJ (ABG)</li>
+ </ul>  
 </div>
 
 
+<div class="w3-container w3-black">
+  <h1>Social Media</h1> 
+  <p>Check out my Facebook, Instagram or even Twitter.</p>
+  <p>RECENT INSTAGRAM POSTS (from 'Andy B Goode' and 'The Jays Vintage')</p>
+  
+</div>
+
+
+<div class="w3-container w3-black">
+  <h1>Contact Me</h1>
+  <p>links</p>
+<ul id="contactList">
+<li id="liPhone">Phone: 07415 338859</li>
+<li id="liEmail">email: <a href="mailto:Andy@AndyBGoode.com?Subject=Hi%20Andy" target="_top">Andy@AndyBGoode.com</a></li>
+<li id="liFacebook">Facebook: <a href="https://www.facebook.com/AndyBGoode">AndyBGoode</a></li>
+<li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
+<li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
+<li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
+<li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>
+<li id="liWebsite">Version: v2.3.4</li>
+</ul>
+</div>
+
+</div>
 </body>
 </html>
