--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,20 @@
 <body>
 <div class="w3-container w3-deep-purple">
 
+
+<div class="w3-bar w3-black">
+  <a href="#" class="w3-bar-item w3-button w3-border w3-mobile w3-green">Home</a>
+  <a href="news.html" class="w3-bar-item w3-button w3-border w3-mobile">News</a>
+  <a href="photos.html" class="w3-bar-item w3-button w3-border w3-mobile">Photos</a>
+  <a href="music.html" class="w3-bar-item w3-button w3-border w3-mobile">Music</a>
+  <a href="videos.html" class="w3-bar-item w3-button w3-border w3-mobile">Videos</a>
+  <a href="songlist.html" class="w3-bar-item w3-button w3-border w3-mobile">Songs</a>
+  <a href="testimonials.html" class="w3-bar-item w3-button w3-border w3-mobile">Testimonials</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-border w3-mobile">Contact</a>
+</div>
+
+
+
 <div class="w3-container w3-black">
   <h1>Andy B Goode</h1> 
   <p>Andy B Goode - Vintage Rock n Roll, 1940s, Rat Pack Singer</p> 
@@ -59,7 +73,7 @@
 <div class="w3-row-padding">
   <div class="w3-third w3-white">
     <h2>Quality Vintage Entertainment</h2>
-    <p>xx xxxx x xxx x xxx x xxx.</p>
+    <p>1940s/50s/60s/70s  Vintage Entertainer. Swing Singer and Heartfelt Crooner. Let me enliven your events with some fun vintage 'Rock n Roll' music. Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</p>
 <ul>
 <li>Available for: Birthdays, Weddings, Anniversaries, Fayres, Fetes, Food Fayres, Vintage Events, Parties, Dances, Church Events, Residential Homes, Care Homes, Hospices, etc...</li>
 <li>Based in Tamworth, Staffordshire, Midlands</li>
@@ -125,9 +139,13 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 </div>
 
 
-<div class="w3-container w3-black">
-  <h1>Contact Me</h1>
-  <p>links</p>
+
+
+
+
+<div class="w3-row-padding">
+  <div class="w3-third w3-black">
+	<h1>Contact Me</h1>
 <ul id="contactList">
 <li id="liPhone">Phone: 07415 338859</li>
 <li id="liEmail">email: <a href="mailto:Andy@AndyBGoode.com?Subject=Hi%20Andy" target="_top">Andy@AndyBGoode.com</a></li>
@@ -136,9 +154,34 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
 <li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>
-<li id="liWebsite">Version: v2.3.4</li>
+<li id="liWebsite">Version: v2.5.0</li>
 </ul>
+  </div>
+
+  <div class="w3-third w3-grey">
+    <h2>222</h2>
+    <p>xx xx x xxx x x.</p> 
+  </div>
+
+  <div class="w3-third w3-dark-grey">
+    <h2>333</h2>
+    <p>xx xxx xx xx xxxx xx</p>
+  </div>
 </div>
+
+
+
+<div class="w3-bar w3-black">
+  <a href="#" class="w3-bar-item w3-button w3-border w3-mobile w3-green">Home</a>
+  <a href="news.html" class="w3-bar-item w3-button w3-border w3-mobile">News</a>
+  <a href="photos.html" class="w3-bar-item w3-button w3-border w3-mobile">Photos</a>
+  <a href="music.html" class="w3-bar-item w3-button w3-border w3-mobile">Music</a>
+  <a href="videos.html" class="w3-bar-item w3-button w3-border w3-mobile">Videos</a>
+  <a href="songlist.html" class="w3-bar-item w3-button w3-border w3-mobile">Songs</a>
+  <a href="testimonials.html" class="w3-bar-item w3-button w3-border w3-mobile">Testimonials</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-border w3-mobile">Contact</a>
+</div>
+
 
 </div>
 </body>
