--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="w3.css">
 </head>
+
 <body>
+<script type="text/javascript" src="misc/instafeed.min.js"></script>
 <div class="w3-container w3-deep-purple">
 
 
@@ -135,7 +137,7 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
   <h1>Social Media</h1> 
   <p>Check out my Facebook, Instagram or even Twitter.</p>
   <p>RECENT INSTAGRAM POSTS (from 'Andy B Goode' and 'The Jays Vintage')</p>
-  
+  <div id="instafeed"></div>
 </div>
 
 
