test..insta doesnt work

--- a/index2.html
+++ b/index2.html
@@ -40,12 +40,23 @@
 </head>
 
 <body>
+<div itemscope itemtype="http://schema.org/WebSite">
+  <div itemprop="author" itemscope itemtype="http://schema.org/Person"><meta itemprop="name" content="Andy B Goode"/></div>
+  <div itemprop="accountablePerson" itemscope itemtype="http://schema.org/Person"><meta itemprop="name" content="Andy B Goode"/></div>
+  <meta itemprop="description" content="Andy B Goode is a dynamic 1950s/1960s Rock n Roll/Vintage Singer based in Tamworth Staffordshire England" />
+  <meta itemprop="image" content="http://www.andybgoode.com/images/andybgoode.png" />
+  <meta itemprop="url" content="http://www.AndyBGoode.com" />
+  <meta itemprop="isFamilyFriendly" content="True" />
+  <meta itemprop="genre" content="Rock n Roll" />
+  <meta itemprop="keywords" content="Andy B Goode, AndyBGoode, Rock n Roll, Rock and Roll, Singer, Entertainer, Tamworth, Staffordshire, England, UK, Vintage, Classic" />
+</div>
 <script src="misc/instafeed.min.js"></script>
-<div class="w3-container w3-deep-purple">
+
+<div class="w3-container w3-black">
 
 
 <div class="w3-bar w3-black">
-  <a href="#" class="w3-bar-item w3-button w3-border w3-mobile w3-green">Home</a>
+  <a href="#" class="w3-bar-item w3-button w3-border w3-mobile w3-mobile">Home</a>
   <a href="news.html" class="w3-bar-item w3-button w3-border w3-mobile">News</a>
   <a href="photos.html" class="w3-bar-item w3-button w3-border w3-mobile">Photos</a>
   <a href="music.html" class="w3-bar-item w3-button w3-border w3-mobile">Music</a>
@@ -164,7 +175,7 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 
 <div class="w3-container w3-black">
   <h1>Social Media</h1> 
-  <p>Check out my Facebook, Instagram or even Twitter.</p>
+  <p>Check out my <a href="https://www.facebook.com/AndyBGoode">Facebook</a>, <a href="https://www.instagram.com/andybgoodevocalist">Instagram</a> or even <a href="http://www.twitter.com/AndyBGoode">Twitter</a>.</p>
   <p>RECENT INSTAGRAM POSTS (from 'Andy B Goode' and 'The Jays Vintage')</p>
   <div id="instafeed"></div>
 </div>
@@ -203,7 +214,7 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 
 
 <div class="w3-bar w3-black">
-  <a href="#" class="w3-bar-item w3-button w3-border w3-mobile w3-green">Home</a>
+  <a href="#" class="w3-bar-item w3-button w3-border w3-mobile w3-mobile">Home</a>
   <a href="news.html" class="w3-bar-item w3-button w3-border w3-mobile">News</a>
   <a href="photos.html" class="w3-bar-item w3-button w3-border w3-mobile">Photos</a>
   <a href="music.html" class="w3-bar-item w3-button w3-border w3-mobile">Music</a>
