--- a/index2.html
+++ b/index2.html
@@ -5,18 +5,18 @@
  All rights reserved
  -->
 <head>
-<title>Andy B Goode - Vintage Rock n Roll, 1940s, Rat Pack Singer</title>
+<title>Andy B Goode - Vintage Rock and Roll, 1940s, Rat Pack Singer, 1970s</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="w3.css">
 
 <meta http-equiv="Cache-Control" content="no-cache" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<meta name="short" content="AndyBGoode 1950s/60 Rock and Roll Entertainer"/>
-<meta name="description" content="Andy B Goode 1950s/1960s Rock n Roll Singer based in Tamworth, Staffordshire, England">
+<meta name="short" content="Andy B Goode - Vintage Rock and Roll, 1940s, Rat Pack Singer, 1970s, Entertainer"/>
+<meta name="description" content="Andy B Goode - Vintage Rock and Roll, 1940s, Rat Pack Singer, 1970s based in Tamworth, Staffordshire, England">
 <meta name="author" content="Andrew Britton">
 <meta charset="UTF-8">
-<meta name="keywords" content="AndyBGoode,Andy B Goode,Singer,Vocalist,Tamworth,1950s,1960s,Rock n Roll,Rock and Roll,Entertainment,Vintage">
+<meta name="keywords" content="AndyBGoode,Andy B Goode,Singer,Vocalist,Tamworth,1940s,1950s,1960s,1970s, Rat Pack,Rock n Roll,Rock and Roll,Entertainment,Vintage">
 
 <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
@@ -43,16 +43,16 @@
 <div itemscope itemtype="http://schema.org/WebSite">
   <div itemprop="author" itemscope itemtype="http://schema.org/Person"><meta itemprop="name" content="Andy B Goode"/></div>
   <div itemprop="accountablePerson" itemscope itemtype="http://schema.org/Person"><meta itemprop="name" content="Andy B Goode"/></div>
-  <meta itemprop="description" content="Andy B Goode is a dynamic 1950s/1960s Rock n Roll/Vintage Singer based in Tamworth Staffordshire England" />
+  <meta itemprop="description" content="Andy B Goode is a dynamic 1950s/1960s Rock and Roll/Rat Pack/1940s/Vintage Singer based in Tamworth Staffordshire England" />
   <meta itemprop="image" content="http://www.andybgoode.com/images/andybgoode.png" />
   <meta itemprop="url" content="http://www.AndyBGoode.com" />
   <meta itemprop="isFamilyFriendly" content="True" />
   <meta itemprop="genre" content="Rock n Roll" />
-  <meta itemprop="keywords" content="Andy B Goode, AndyBGoode, Rock n Roll, Rock and Roll, Singer, Entertainer, Tamworth, Staffordshire, England, UK, Vintage, Classic" />
+  <meta itemprop="keywords" content="Andy B Goode, AndyBGoode, Rock n Roll, Rock and Roll, Rat Pack, Singer, Entertainer, Tamworth, Staffordshire, England, UK, Vintage, Classic, 1940s, 1950s, 1960s, 1970s" />
 </div>
 <script src="misc/instafeed.min.js"></script>
-
 <div class="w3-container w3-black">
+
 
 
 <div class="w3-bar w3-black">
@@ -70,57 +70,70 @@
 
 <div class="w3-container w3-black">
   <h1>Andy B Goode</h1> 
-  <p>Andy B Goode - Vintage Rock n Roll, 1940s, Rat Pack Singer</p> 
+  <p>Andy B Goode - Vintage Singer</p>
+<div class="w3-cell-row">
+ <img src="photos/andybgoode0001-thumb.jpg" class="w3-image w3-round" alt="1950s/60s Rock and Roll Entertainer"> 
+ <img src="photos/thejays0005-thumb.jpg" class="w3-image w3-round" alt="1960s Rat Pack, Swing Singer"> 
+ <img src="photos/thejays0004-thumb.jpg" class="w3-image w3-round" alt="1940s and Wartime Vocalist"> 
+</div>
 </div>
 
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
     <h2>Rock and Roll</h2>
-    <p>Solo 1950s/1960s Rock and Roll Sets</p>
+    <p>"Shake Rattle and Roll"</p>
 <ul>
-<li>Dynamic Rock n Roll Vocalist and Heartfelt Crooner</li>
+<li>Solo 1950s/1960s Rock and Roll Sets</li>
+<li>Dynamic Rock n Roll Vocalist</li>
 <li>Jive the night away to the energetic sounds those classic Rock n Roll songs</li>
-<li>Fun 1950s 'Teddy boy' style outfit</li>
+<li>Outfit: Fun 1950s 'Teddy boy' style complete with Blue Suede shoes</li>
 <li>Rock and Roll Christmas set also available</li>
-<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everly Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly, Frank Sinatra, Dean Martin, The Platters, Michael Buble and many more</li>
+<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everly Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly, The Platters and many more</li>
+<li><a href="songlist.html">Song List</a></li>
 </ul>
   </div>
 
   <div class="w3-third w3-grey">
     <h2>Rat Pack</h2>
-    <p>Paris is the capital of France.</p> 
+    <p>"When I Fall in Love it will be Forever"</p>
 <ul>
-<li>Classy Rat Pack / Swing and Crooning hits.</li>
-<li>xxx xxx xxx xxxx xxxxxx x songs</li>
-<li>DJ Sinatra-style outfit</li>
+<li>Classy Rat Pack, Swing and Crooning hits.</li>
+<li>Smooth love songs by a heartfelt Crooner</li>
+<li>Outfit: DJ, Sinatra-style</li>
 <li>xx xx xx xxx xxx </li>
-<li>Epic hits by: Frank Sinatra, Dean Martin, Andy Williams, Michael Buble and many more</li>
+<li>Epic hits by: Frank Sinatra, Dean Martin, Nat King Cole, Tony Bennett, Bobby Darin, Andy Williams, Michael Buble and many more</li>
+<li><a href="songlist.html">Song List</a></li>
 </ul>
   </div>
 
   <div class="w3-third w3-dark-grey">
     <h2>1940s</h2>
-    <p>Solo 1940s and Wartime Sets</p>
+    <p>"Goodnight Sweetheart"</p>
 <ul>
+<li>Solo 1940s and Wartime Sets</li>
 <li>Crooner classics</li>
 <li>Wartime songs</li>
 <li>Sing along tunes</li>
-<li>1940s style outfit</li>
-<li>Epic hits by: Nat King Cole, Bing Crosby, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, Harry Connick Jr and many more.</li>
+<li>Outfit: 1940s style</li>
+<li>Epic hits by: Nat King Cole, Bing Crosby, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, Michael Buble, Harry Connick Jr and many more.</li>
+<li><a href="songlist.html">Song List</a></li>
 </ul>
   </div>
+
 </div>
 
 
+
 <div class="w3-row-padding">
-  <div class="w3-third w3-white">
+  <div class="w3-third w3-grey">
     <h2>Quality Vintage Entertainment</h2>
-    <p>1940s/50s/60s/70s  Vintage Entertainer. Swing Singer and Heartfelt Crooner. Let me enliven your events with some fun vintage 'Rock n Roll' music. Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</p>
+    <p>Professional 1940s to 1970s  Vintage Entertainer, Swing Singer. Let me enliven your events with some fun vintage 'Rock n Roll' music. Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</p>
 <ul>
 <li>Available for: Birthdays, Weddings, Anniversaries, Fayres, Fetes, Food Fayres, Vintage Events, Parties, Dances, Church Events, Residential Homes, Care Homes, Hospices, etc...</li>
 <li>Based in Tamworth, Staffordshire, Midlands</li>
 <li>I only use high quality backing tracks</li>
 <li>Powerful 2800W PA</li>
+<li>Jazzy stage lights add real sparkle</li>
 <li>Current Public Liability Insurance</li>
 <li>PAT Tested Equipment</li>
 </ul>
@@ -128,30 +141,38 @@
 
   <div class="w3-third w3-dark-grey">
     <h2>A Vintage Christmas</h2>
-    <p>Rock and Roll and Crooning Christmas.</p> 
+<p>Rock and Roll and Crooning Christmas.</p> 
 <ul>
 <li>Classy Rat Pack / Swing and Crooning hits.</li>
-<li>xxx xxx xxx xxxx xxxxxx x songs</li>
-<li>DJ Sinatra-style outfit</li>
+<li>Lovely uplifting seasonal classics</li>
+<li>Outfit: Smart Dinner Jacket</li>
 <li>xx xx xx xxx xxx </li>
 <li>Epic hits by: Frank Sinatra, Dean Martin, Andy Williams, Michael Buble and many more</li>
+<li><a href="songlist.html">Song List</a></li>
 </ul>
   </div>
 
   <div class="w3-third w3-black">
     <h2>1940s Vocal Harmony Group</h2>
-    <p>I'm also part of a 1940s Vocal Harmony Group named <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>. 
+<p>I'm also part of a 1940s Vocal Harmony Group named <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>. 
 We sing delightful vintage tunes in the style of Bing Crosby and The Andrew's Sisters while dressed in lovely vintage style outfits. 
 We also offer combined 1940s + Andy B Goode 1950s/1960s Rock n Roll gigs.
 Perfect for:</p>
 <ul>
 <li>1940s Events</li>
+<li>Town Centre / Bandstand Events</li>
 <li>Christmas Events</li>
 <li>Food Festivals</li>
 <li>Vintage Fairs</li>
+<li>Veterans Events</li>
+<li>Garden Party</li>
+<li>Golden Wedding Anniversary</li>
+<li><a href="songlist.html">Song List</a></li>
 </ul>
   </div>
+
 </div>
+
 
 
 <div class="w3-container w3-black">
@@ -173,6 +194,7 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 </div>
 
 
+
 <div class="w3-container w3-black">
   <h1>Social Media</h1> 
   <p>Check out my <a href="https://www.facebook.com/AndyBGoode">Facebook</a>, <a href="https://www.instagram.com/andybgoodevocalist">Instagram</a> or even <a href="http://www.twitter.com/AndyBGoode">Twitter</a>.</p>
@@ -185,7 +207,7 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 
 
 
-<div class="w3-row-padding">
+<div id="contact" class="w3-row-padding">
   <div class="w3-third w3-black">
 	<h1>Contact Me</h1>
 <ul id="contactList">
@@ -201,13 +223,16 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
   </div>
 
   <div class="w3-third w3-grey">
-    <h2>222</h2>
-    <p>xx xx x xxx x x.</p> 
+    <h2>The Jays Vintage</h2>
+    <p>Vintage 1940s Vocal Harmony Group</p>
+    <p><a href='http://www.TheJaysVintage.com'>The Jays Vintage Website</a></p>
   </div>
 
   <div class="w3-third w3-dark-grey">
-    <h2>333</h2>
-    <p>xx xxx xx xx xxxx xx</p>
+    <h2>Jude Britton</h2>
+    <p>Acoustic Singer Songwriter</p>
+    <p>Having shared a stage with him, I can whole heartly recommend this talented chap.</p>
+    <p><a href='http://www.JudeBritton.com'>Jude Britton's Website</a></p>
   </div>
 </div>
 
@@ -226,5 +251,20 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 
 
 </div>
+<script type="text/javascript">
+ var changebleLimit = 12;
+ var ajb1 = '3153218281.1677ed0.';
+ var ajb2 = 'a7ca15e521d244b69f85ef6fa1a54ba4';
+ var ajb3 = ajb1+ajb2;
+    var userFeed = new Instafeed({
+        get: 'user',
+        userId: '3153218281',
+        accessToken: ajb3,
+        limit: 12,
+        resolution: 'low_resolution',
+        template: '<a href="{{link}}"> <img width="260" src="{{image}}" alt="({{location}}) {{caption}}"/></a>'
+    });
+    userFeed.run();
+</script>
 </body>
 </html>
